<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationActivity"
    android:background="@drawable/green_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/registration_text_signup"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_main_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_text"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/registration_text_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registration_inputSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_text_signUp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/registration_inputSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_email"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColorHint="@color/grey_light"
            android:textSize="16sp"
            android:background="@drawable/input_form_default"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@."/>

        <TextView
            android:id="@+id/registration_error_text"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_email_text"
            android:textColor="@color/red_error"
            android:textSize="13sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@color/grey_light"
            android:textSize="16sp"
            android:background="@drawable/input_form_default"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_hint"
            android:textColorHint="@color/grey_light"
            android:textSize="16sp"
            android:background="@drawable/input_form_default"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/input_form_default"
            android:layout_marginTop="24dp"
            android:text="@string/btn_text_signUp"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/registration_btn_logIn"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="start"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_forgot"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="end"/>

        </LinearLayout>

        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>